# monorepo-datahub-ops

./: .gitignore  README.md  mise.toml  nx  nx.json
.github/old/: homepage.yml
.github/workflows/: argocd.yaml  argocd.yml  cloudflare.yaml  cloudflare.yml  go.yml  homepage.yml  labtools-k3s.yml  samples-golang-app-1.yaml  samples-golang-app-2.yaml  samples-golang-app-3.yaml  samples-golang-app-4.yaml  samples-rust-app-1.yaml  samples-rust-app-2.yaml  samples-rust-app-3.yaml  samples-rust-app-4.yaml  zeppelin.yaml  zeppelin.yml
Writerside/: t.tree
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: starter-topic.md
docs/: README.md  clouldflared-cli.md  k3s-install.md  multicluster.md
docs/jetbrains/: README.md
grafana/dashboards/: dashboard-go-demo-apps.json
k3s/: INSTALL.md  custom-resources-pve.yaml  custom-resources-pvel.yaml  custom-resources-world1l.yaml  install-single-node.sh
k8s/argocd/: README.md  app-argocd-bootstrap.yaml  appset.yaml
k8s/cert-manager/: INSTALL.md  create-cert-intermediate.sh  create-root-cert.sh  install.sh  show-cert-secret.sh  show-cert.sh  show-simple-web.sh  spnw-intermediate-ca1.yaml  spnw-root-ca.yaml  test-cert.yaml  test-simple-web.sh  test-verify.sh  values.yaml
k8s/cloudflare/: README.md  cloudflare-tunnel.yaml  debug-network.sh  debug.sh  deployment.yaml  kustomize.yaml  network-policy.yaml  networkpolicy.disabled-yaml
k8s/harbor/: README.md  (+2 more)
scripts/: git-reset.sh  github-clean-actions-logs.sh  github-clean-actions-workflow.sh
src-samples/rust/app-3/: Cargo.toml
src-samples/rust/app-3/src/: main.rs
(+209 files in other folders)
